[gd_scene load_steps=7 format=3 uid="uid://d1nrmrw5qux1v"]

[ext_resource type="Script" path="res://MiniGame/Player/mgplayer.gd" id="1_noxos"]
[ext_resource type="Texture2D" uid="uid://dwj7cnuhtuojm" path="res://MiniGame/Textures/anims/scifi_marine_stand_2.png" id="2_7huc6"]
[ext_resource type="Texture2D" uid="uid://c3r77eacb8sa3" path="res://MiniGame/Textures/anims/scifi_marine_run_3.png" id="3_hs72k"]
[ext_resource type="Texture2D" uid="uid://cmekmooes5nyp" path="res://MiniGame/Textures/shield.png" id="4_p3akt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pi16c"]
radius = 31.0
height = 62.0

[sub_resource type="SpriteFrames" id="SpriteFrames_iclb4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7huc6")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hs72k")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[node name="MgPlayer" type="Area2D"]
script = ExtResource("1_noxos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_pi16c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_iclb4")
animation = &"Default"

[node name="FiringPositions" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Gun" type="Node2D" parent="FiringPositions"]
position = Vector2(17, 7)

[node name="FireDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="InvicibilityTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Shield" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -33)
scale = Vector2(0.115625, 0.120312)
texture = ExtResource("4_p3akt")

[connection signal="timeout" from="InvicibilityTimer" to="." method="_on_invicibility_timer_timeout"]
